Global - Title and hyperlink vertically aligned fixed.

--- a/styles/molecules-venues.css
+++ b/styles/molecules-venues.css
@@ -105,6 +105,7 @@
   margin: 0 auto;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-end;
   padding: 16px 0;
   border-bottom: 1px solid var(--sundance__neutral3);
 }
